SaveConf and LoadConf implemented.

--- a/src/mucomfw.lpi
+++ b/src/mucomfw.lpi
@@ -15,6 +15,9 @@
       <EnableI18N LFM="False"/>
     </i18n>
     <VersionInfo>
+      <UseVersionInfo Value="True"/>
+      <AutoIncrementBuild Value="True"/>
+      <BuildNr Value="3"/>
       <StringTable ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="1">
